Fixed lower right button on mobile not fully displaying text

--- a/src/index.css
+++ b/src/index.css
@@ -1015,7 +1015,7 @@ input[type=submit]:hover {
     }
 
     .lowerRight {
-        width: 6rem;
+        width: 7.5rem;
         bottom: 2rem;
     }
 
